OpenJMLTest/test/gitbug499/expected
test/gitbug499/Interval.java:43: error: Expected a declaration or a JML construct inside the JML annotation here
            //@ contains(i); // Intentional error - used to crash
                ^
test/gitbug499/Interval.java:64: error: illegal start of type
        //@ !contains(i); // Intentional error - used to crash
            ^
test/gitbug499/Interval.java:64: error: invalid method declaration; return type required
        //@ !contains(i); // Intentional error - used to crash
             ^
test/gitbug499/Interval.java:64: error: <identifier> expected
        //@ !contains(i); // Intentional error - used to crash
                       ^
test/gitbug499/Interval.java:67: error: class, interface, enum, or record expected
    public /*@ pure @*/ int size() {
                        ^
test/gitbug499/Interval.java:69: error: class, interface, enum, or record expected
    }
    ^
Operation not performed because of parse or type errors
6 errors
